# SemanticProjection

./: .gitignore  README.md  pyproject.toml
src/SemanticProjection/: Embedder.py  Projection.py  ProjectionAnalyzer.py  SemanticProjecter.py  __init__.py
src/SemanticProjection/data/: __init__.py
src/vector_projection/: loader.py  pipeline.py  plotter.py
