[project]
name = "SemanticProjection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurits Lyngbaek", email = "laurits@cc.au.dk" }
]
requires-python = ">=3.12.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
